2004-11-30	Benedikt Meurer <benny@xfce.org>

	* src/: Copyright corrections.

2004-11-28	Benedikt Meurer <benny@xfce.org>

	* NEWS, po/de.po, po/de.gmo: Fix version number.

2004-11-28	Benedikt Meurer <benny@xfce.org>

	* po/libexo.pot: Updated.
	* po/de.po, po/de.gmo: Completed the german translations.
	* exo/exo-binding.c, exo/exo-binding.h: Avoid recursing in notify
	  handlers for mutual bindings by blocking the destination handler.
	* configure.ac, NEWS: Version 0.2.0pre2.

2004-11-28	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.h: Added 4 padding fields to ExoIconViewClass
	  for future expansion.
	* exo/exo-md5.h, exo/exo-md5.c: Changed the API to be compatible
	  with libgnome/libegg.
	* docs/: Updated API documentation.

2004-11-27	Benedikt Meurer <benny@xfce.org>

	* exo/exo-ellipsized-label.c(exo_ellipsized_label_new): Fix typo, the
	  property is named "label", not "text".
	* exo/exo-icon-bar.c(exo_icon_bar_style_set): Reset background color
	  only if the widget is realized.

2004-11-27	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-bar.c: Update background of the bin_window as well
	  when style changes. This fixes bug #23.

2004-11-26	Benedikt Meurer <benny@xfce.org>

	* NEWS: Updated for 0.2.0pre1.

2004-11-26	Benedikt Meurer <benny@xfce.org>

	* exo/exo-string.h, exo/exo-string.c: Added exo_strndupv() utility
	  function to duplicate string arrays.
	* exo/exo-enum-types.h, exo/exo-pango-extensions.c,
	  exo/exo-enum-types.c, exo/exo-pango-extensions.h: Added 
	  EXO_PANGO_ELLIPSIZE_NONE to be compatible with Pango. Use
	  ellipsizing functions provided by Pango 1.6 if build against
	  Pango 1.6 or above.
	* exo/exo-xsession-client.h, exo/exo-xsession-client.c: Added
	  exo_xsession_client_get_restart_command() as per Brians request.
	* exo/exo-ellipsized-label.c, exo/exo-ellipsized-label.h: Made this
	  widget compatible with GtkLabel from Gtk+ 2.6.
	* exo/exo-cell-renderer-ellipsized-text.c,