@@ -8,6 +8,7 @@
 <!ENTITY exo-cell-renderer-ellipsized-text SYSTEM "xml/exo-cell-renderer-ellipsized-text.xml">
 <!ENTITY exo-ellipsized-label SYSTEM "xml/exo-ellipsized-label.xml">
 <!ENTITY exo-icon-bar SYSTEM "xml/exo-icon-bar.xml">
+<!ENTITY exo-icon-view SYSTEM "xml/exo-icon-view.xml">
 <!ENTITY exo-gdk-pixbuf-extensions SYSTEM "xml/exo-gdk-pixbuf-extensions.xml">
 <!ENTITY exo-gobject-extensions SYSTEM "xml/exo-gobject-extensions.xml">
 <!ENTITY exo-pango-extensions SYSTEM "xml/exo-pango-extensions.xml">
@@ -71,6 +72,7 @@
     &exo-cell-renderer-ellipsized-text;
     &exo-ellipsized-label;
     &exo-icon-bar;
+    &exo-icon-view;
   </part>
 
   <part id="exo-extensions">
