@@ -7,6 +7,7 @@ exo_toolbars_view_get_type
 exo_cell_renderer_ellipsized_text_get_type
 exo_ellipsized_label_get_type
 exo_icon_bar_get_type
+exo_icon_view_get_type
 exo_xsession_client_get_type
 
 exo_md5_digest_get_type
