@@ -1,6 +1,11 @@
+2004-12-01	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-view.c, exo/exo-icon-view.h, docs/: Added documentation
+	  for the ExoIconView class.
+
 2004-11-30	Benedikt Meurer <benny@xfce.org>
 
-	* src/: Copyright corrections.
+	* exo/: Copyright corrections.
 
 2004-11-28	Benedikt Meurer <benny@xfce.org>
 
